[CSS] Corrects a bug causing "nowrap" no more working in Firefox >= 36.0
git-svn-id: https://subversion.renater.fr/wimsdev/trunk@8638 b48fb02d-6135-0410-b1dd-deb767c81da9

--- a/wims/public_html/themes/_css/utilities.css
+++ b/wims/public_html/themes/_css/utilities.css
@@ -19,7 +19,12 @@ div.wimscenter{ margin:1.5rem 0.5rem 0.2rem 0.5rem; }
 .small { font-size: 90%;}
 .bold { font-weight:bold;}
 
-.nowrap {white-space:nowrap;overflow: auto;}
+.nowrap {
+  /*white-space:nowrap;*/
+  white-space:pre;
+  overflow: auto;
+  word-wrap: normal;
+}
 .wims_emph {font-style:italic ; color:#2A67FF;font-weight:bold;}
 .clearall{clear: both;}
 .inline {display:inline;display:inline-block;}
@@ -88,14 +93,21 @@ img.wimscenter { margin-left:auto;margin-right:auto;}
   padding:0 .5em 0;
 }
 /* Technical instructions in exercises for example*/
-.wims_instruction { font-style:italic;font-size:small;
-   margin:1.5rem 0.5rem 0.2rem 0.5rem;color:rgb(100,100,100);
-   background-color:rgba(230,230,230,0.3);
+.wims_instruction { 
+   font-style:italic;font-size:small;
+   margin:1.5rem .5rem .2rem .5rem;
+   color:rgb(100,100,100);
+   background-color:rgba(230,230,230,.3);
    border:1px solid silver;
 }
 .wims_instruction, .wims_instruction h2{padding:.3rem .4rem;}
-.wims_instruction h2{display:inline-block;font-size:0.8em;margin:-0.3rem;
- background-color:silver;color:rgb(80,80,80)}
+.wims_instruction h2{
+  display:inline-block;
+  font-size:0.8em;
+  margin:-0.3rem;
+  background-color:silver;
+  color:rgb(80,80,80)
+}
 
 /* alert message from teacher to a choosen student */
 .wims_alertchat {
